--- a/ConstraintLayout/constraintlayout/src/main/res/layout/activity_constraint_layout_sample.xml
+++ b/ConstraintLayout/constraintlayout/src/main/res/layout/activity_constraint_layout_sample.xml
@@ -1,32 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginStart="4dp"
+  <ImageView
+    android:id="@+id/image"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:layout_margin="50dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
-        android:layout_marginTop="120dp"
+  <TextView
+    android:id="@+id/textview1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="中国电信"
+    android:layout_marginStart="20dp"
+    app:layout_constraintStart_toEndOf="@+id/image"
+    app:layout_constraintTop_toTopOf="@+id/image" />
 
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+  <TextView
+    android:id="@+id/textview2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="[浙江恒力液压]浙江恒力液压浙江浙江恒力液压"
+    app:layout_constraintStart_toStartOf="@+id/textview1"
+    app:layout_constraintTop_toBottomOf="@+id/textview1"
+    android:layout_marginTop="30dp"/>
 
-    <Button
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text=" 关注 "
-
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
-
+  <TextView
+    android:id="@+id/textView3"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="周日 22：22"
+    app:layout_constraintBottom_toBottomOf="@+id/textview1"
+    android:layout_marginEnd="20dp"
+    app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
