--- a/ConstraintLayout/constraintlayout/src/main/res/layout/activity_constraint_layout_sample.xml
+++ b/ConstraintLayout/constraintlayout/src/main/res/layout/activity_constraint_layout_sample.xml
@@ -6,38 +6,14 @@
   android:layout_height="match_parent">
 
   <ImageView
-    android:id="@+id/image"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_margin="50dp"
+    android:id="@+id/imageView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="32dp"
+    android:src="@mipmap/ic_launcher"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
-
-  <TextView
-    android:id="@+id/textview1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="中国电信"
-    android:layout_marginStart="20dp"
-    app:layout_constraintStart_toEndOf="@+id/image"
-    app:layout_constraintTop_toTopOf="@+id/image" />
-
-  <TextView
-    android:id="@+id/textview2"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="[浙江恒力液压]浙江恒力液压浙江浙江恒力液压"
-    app:layout_constraintStart_toStartOf="@+id/textview1"
-    app:layout_constraintTop_toBottomOf="@+id/textview1"
-    android:layout_marginTop="30dp"/>
-
-  <TextView
-    android:id="@+id/textView3"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="周日 22：22"
-    app:layout_constraintBottom_toBottomOf="@+id/textview1"
-    android:layout_marginEnd="20dp"
-    app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
