[约束布局]新增:baseLine对齐

--- a/ConstraintLayout/constraintlayout/src/main/res/layout/activity_sample_baseline.xml
+++ b/ConstraintLayout/constraintlayout/src/main/res/layout/activity_sample_baseline.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="%"
             android:textSize="16sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView1"
             app:layout_constraintStart_toEndOf="@+id/textView1" />
 
 
