--- a/ConstraintLayout/constraintlayout/src/main/res/layout/activity_sample_constrained.xml
+++ b/ConstraintLayout/constraintlayout/src/main/res/layout/activity_sample_constrained.xml
@@ -25,6 +25,8 @@
         android:text="长文本长文本长文本长文本长文本文本长文本长文本"
         android:textColor="@android:color/white"
         app:layout_constrainedWidth="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="@+id/avatar"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="@+id/avatar"
