--- a/ConstraintLayout/constraintlayout/src/main/res/layout/activity_sample_chainstyle.xml
+++ b/ConstraintLayout/constraintlayout/src/main/res/layout/activity_sample_chainstyle.xml
@@ -8,34 +8,35 @@
 
 
     <ImageView
-        android:id="@+id/avatar"
-        android:layout_width="70dp"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:layout_height="70dp"
-        android:src="@mipmap/ic_launcher_round"
-        app:layout_constraintBottom_toTopOf="@+id/textview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+      android:id="@+id/avatar"
+      android:layout_width="70dp"
+      android:layout_height="70dp"
+      android:src="@mipmap/ic_launcher_round"
+      app:layout_constraintBottom_toTopOf="@+id/textview"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
-        android:id="@+id/textview"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:background="@color/colorPrimary"
-        android:text="长文本长文本长文本长文本长文本文本长文本长文本"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/avatar"
-        app:layout_constraintStart_toStartOf="@+id/avatar"
-        app:layout_constraintTop_toBottomOf="@+id/avatar" />
-
+      android:id="@+id/textview"
+      android:layout_width="wrap_content"
+      android:layout_height="200dp"
+      android:background="@color/colorPrimary"
+      android:text="长文本长文本长文本长文本长文本文本长文本长文本"
+      android:textColor="@android:color/white"
+      app:layout_constraintVertical_chainStyle="packed"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="@+id/avatar"
+      app:layout_constraintStart_toStartOf="@+id/avatar"
+      app:layout_constraintTop_toBottomOf="@+id/avatar" />
 
     <ImageView
         android:id="@+id/view1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
+      app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/view2"
         app:layout_constraintStart_toStartOf="parent" />
