--- a/ConstraintLayout/constraintlayout/src/main/res/layout/activity_flow.xml
+++ b/ConstraintLayout/constraintlayout/src/main/res/layout/activity_flow.xml
@@ -19,7 +19,8 @@
         app:flow_horizontalGap="16dp"
         app:constraint_referenced_ids="view1,view2,view3,view4,view5,view6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+      />
 
     <View
         android:id="@+id/view1"
