--- a/MotionLayout/example/src/main/res/xml/scene_youtube.xml
+++ b/MotionLayout/example/src/main/res/xml/scene_youtube.xml
@@ -162,6 +162,7 @@
             android:background="?android:attr/windowBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+          app:layout_constraintHorizontal_bias="0.0" />
     </ConstraintSet>
 </MotionScene>
